A whole bunch of stuff!
Seriously though, I have no idea. You're a smart guy you can figure it out.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "express": "~4.12.2",
     "i": "^0.3.3",
     "jade": "~1.9.2",
+    "js-schema": "^1.0.1",
     "mocha": "^2.2.4",
     "morgan": "~1.5.1",
+    "rewire": "^2.3.3",
     "sequelize": "^2.1.0",
     "serve-favicon": "~2.2.0",
     "should": "^6.0.1",
