--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   },
   "dependencies": {
     "body-parser": "~1.12.0",
+    "chai": "^2.3.0",
     "coffee-script": "^1.9.2",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.2",
+    "express-validation": "^0.4.1",
     "i": "^0.3.3",
     "jade": "~1.9.2",
+    "joi": "^6.4.1",
     "js-schema": "^1.0.1",
     "mocha": "^2.2.4",
     "morgan": "~1.5.1",
@@ -20,6 +23,7 @@
     "sequelize": "^2.1.0",
     "serve-favicon": "~2.2.0",
     "should": "^6.0.1",
-    "sqlite3": "^3.0.5"
+    "sqlite3": "^3.0.5",
+    "supertest": "^0.15.0"
   }
 }
