--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "namedModules": {
+    "sqlService": "server/services/sqlService.js",
+    "securityService": "server/services/securityService.js",
+    "models": "server/models/index.js",
+    "schemas": "server/schemas.js"
+  },
   "dependencies": {
     "body-parser": "~1.12.0",
     "chai": "^2.3.0",
@@ -13,6 +19,7 @@
     "debug": "~2.1.1",
     "express": "~4.12.2",
     "express-validation": "^0.4.1",
+    "grunt-named-modules": "^1.0.3",
     "i": "^0.3.3",
     "jade": "~1.9.2",
     "joi": "^6.4.1",
