--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "sqlService": "server/services/sqlService.js",
     "securityService": "server/services/securityService.js",
     "models": "server/models/index.js",
-    "schemas": "server/schemas.js"
+    "schemas": "server/schemas.js",
+    "testHelper": "test/testHelper.coffee"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
