--- a/package.json
+++ b/package.json
@@ -5,13 +5,6 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-  "namedModules": {
-    "sqlService": "server/services/sqlService.js",
-    "securityService": "server/services/securityService.js",
-    "models": "server/models/index.js",
-    "schemas": "server/schemas.js",
-    "testHelper": "test/testHelper.coffee"
-  },
   "dependencies": {
     "body-parser": "~1.12.0",
     "chai": "^2.3.0",
@@ -20,6 +13,9 @@
     "debug": "~2.1.1",
     "express": "~4.12.2",
     "express-validation": "^0.4.1",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-uglify": "^0.9.1",
     "grunt-named-modules": "^1.0.3",
     "i": "^0.3.3",
     "jade": "~1.9.2",
@@ -33,5 +29,8 @@
     "should": "^6.0.1",
     "sqlite3": "^3.0.5",
     "supertest": "^0.15.0"
+  },
+  "devDependencies": {
+    "grunt-ng-annotate": "^0.10.0"
   }
 }
