--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^0.8.3",
+    "bluebird": "^2.9.27",
     "body-parser": "~1.12.0",
     "chai": "^2.3.0",
     "coffee-script": "^1.9.2",
@@ -14,15 +16,18 @@
     "express": "~4.12.2",
     "express-validation": "^0.4.1",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-jade": "^0.14.1",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-mocha-test": "^0.12.7",
     "grunt-named-modules": "^1.0.3",
-    "i": "^0.3.3",
     "jade": "~1.9.2",
     "joi": "^6.4.1",
-    "js-schema": "^1.0.1",
+    "lodash": "^3.9.3",
     "mocha": "^2.2.4",
-    "morgan": "~1.5.1",
     "rewire": "^2.3.3",
     "sequelize": "^2.1.0",
     "serve-favicon": "~2.2.0",
@@ -31,6 +36,14 @@
     "supertest": "^0.15.0"
   },
   "devDependencies": {
-    "grunt-ng-annotate": "^0.10.0"
+    "grunt-contrib-jasmine": "^0.8.2",
+    "grunt-karma": "^0.10.1",
+    "grunt-ng-annotate": "^0.10.0",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.12.32",
+    "karma-coffee-preprocessor": "^0.2.1",
+    "karma-jasmine": "^0.3.5",
+    "karma-mocha-reporter": "^1.0.2",
+    "karma-phantomjs-launcher": "^0.1.4"
   }
 }
